tests/conformance/syntax/positive/frontend_valid.ditt
module Frontend.SurfaceValid where

postulate C : Cat
id : (x : C) -> C = \x. x
