tests/conformance/syntax/negative/frontend_invalid.ditt
module Frontend.SurfaceBad where

postulate C : Cat
id : (x : C) -> C =
